chore: remove unnecessary build script